BREAKING CHANGE: compartmentalization of the project, update of the readme, correction of the Espese class for pass by value